# labyrinths-py

./: .gitignore  LICENSE  README.md  codecov.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
labyrinths/: __init__.py  __main__.py  labyrinth.py  maze.py  mazeloader.py  solver.py  starter.py  utils.py  visualizer.py
labyrinths/connection/: __init__.py  client.py  connection.py  host.py
labyrinths/game/: __init__.py  game.py
labyrinths/generators/: __init__.py  dfs.py  generator.py  kruskal.py
labyrinths/session/: __init__.py  clientsession.py  hostsession.py  types.py
labyrinths/ui/: __init__.py  mainwindow.py
labyrinths/ui/widgets/: __init__.py  adminpanel.py  button.py  chat.py  connectmenu.py  container.py  hostmenu.py  input.py  label.py  mainmenu.py  maze.py  mazewindow.py
test/: conftest.py  generators_common.py  test_dfs.py  test_generator.py  test_kruskal.py  test_loader.py  test_smoke.py  test_ui.py  test_ui_button.py  test_ui_maze.py  test_utils.py  ui_common.py
