[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "labyrinths"
description = "Mazes generation, auto-solving and online play"
dynamic = ["readme", "version"]

requires-python = ">= 3.10"
dependencies = [
    "pygame",
    "typing-extensions"
]

authors = [
    { name = "Roman Trapeznikov", email = "trapeznikov.rd@phystech.edu" },
]
license = { file = "LICENSE" }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=labyrinths --cov-report html --cov-branch --verbose --cov-report xml"
testpaths = ["test"]
pythonpath = [".", "test"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[[tool.mypy.overrides]]
module = ['pytest', 'pygame']
ignore_missing_imports = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.hatch-static-analysis]
#config-path = "none"
dependencies = [
    "mypy",
    "black",
    "isort",
]
[tool.hatch.envs.hatch-static-analysis.scripts]
lint-check = [
    #    "flake8 .",  # Unlimited RAM usage, disabling for now
    "dmypy run -- {args:.}",
]
lint-fix = "lint-check"
format-check = [
    "black --check --diff {args:.}",
    "isort --check-only --diff {args:.}",
]
format-fix = [
    "isort {args:.}",
    "black {args:.}",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
